samples/_failures_safe/1761040248_e2aa58_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45862b75.c: In function ‘main’:
./samples/SAFE/__tmp_45862b75.c:147:5: error: expected expression at end of input
  147 |     for (size_t i =
      |     ^~~
./samples/SAFE/__tmp_45862b75.c:147:5: error: expected declaration or statement at end of input
